# Stack

./: .gitignore  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml
backend/: go.mod  go.sum  main.go
backend/config/: config.go  config_test.go
backend/controllers/: auth_controller.go  post_controller.go  stack_controller.go  user_controller.go
backend/interfaces/dto/: login_auth.go  signup_auth.go
backend/internal/auth/: auth.go
backend/internal/authentification/: auth_manager.go
backend/internal/security/: hash.go  token.go
backend/models/: errors.go  models.go  post_repo.go  stack_repo.go  user_repo.go
backend/routes/: routes.go
ia/: pyproject.toml
migrations/: 0001_create_users.sql  0002_create_stacks.sql  0003_create_posts.sql  0004_create_contributors.sql  0005_create_notifications.sql
