[project]
name = "stack-ia"
version = "0.1.0"
description = "A package to provide to Stack project ia features to improve the user experience with good llm implementation"
authors = [
    {name = "dossantos-lukombo",email = "dossantos.lukombo918@gmail.com> theo.dubois <theo.dubois3766@gmail.com"}
]
license = {text = "FSL-1.1-ALv2-10Y-Attribution"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
